fixing footer links

--- a/footer.html
+++ b/footer.html
@@ -37,24 +37,24 @@
           <h3 class="widget-title">Navigation</h3>
           <ul class="menu">
             <li class="">
-              <a href="/index.html">Home</a>
+              <a href="https://psyclin.github.io/PineLabs/index.html">Home</a>
             </li>
             <li class="">
-              <a href="/group_projects.html">Projects</a>
+              <a href="https://psyclin.github.io/PineLabs/group_projects.html">Projects</a>
             </li>
             <li class="">
-              <a href="/principal_investigators.html"
+              <a href="https://psyclin.github.io/PineLabs/principal_investigators.html"
                 >Principal Investigators</a
               >
             </li>
             <li class="">
-              <a href="/lab_members.html">Lab Members</a>
+              <a href="https://psyclin.github.io/PineLabs/lab_members.html">Lab Members</a>
             </li>
             <li class="">
-              <a href="/publications.html">Publications</a>
+              <a href="https://psyclin.github.io/PineLabs/publications.html">Publications</a>
             </li>
             <li class="">
-              <a href="/knowledge_translation.html">Knowledge Translation</a>
+              <a href="https://psyclin.github.io/PineLabs/knowledge_translation.html">Knowledge Translation</a>
             </li>
           </ul>
         </div>
